# thurible

./: .gitignore  Makefile  Pipfile  README.rst  precommit.py  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg
docs/: introduction.rst  panels.rst  requirements.rst  requirements.txt
docs/source/: conf.py  index.rst  introduction.rst  managers.rst  messages.rst  panels.rst  updates.rst
examples/: eventsplash.py  favword.py  filereader.py  showsplash.py  tensecs.py
src/thurible/: __init__.py  dialog.py  eventmanager.py  panel.py  table.py  thurible.py
tests/: conftest.py  test_dialog.py  test_eventmanager.py  test_filereader.py  test_init.py  test_log.py  test_menu.py  test_panel.py  test_progress.py  test_splash.py  test_table.py  test_text.py  test_textdialog.py  test_thurible.py  test_util.py
tests/data/: simple.txt  spam.txt
tests/data/lyrics/: bohemian.txt
thurible/: __init__.py  dialog.py  eventmanager.py  log.py  menu.py  messages.py  panel.py  progress.py  splash.py  table.py  text.py  textdialog.py  thurible.py  util.py
