[pycodestyle]
quiet = 1
ignore = E231,W503


[precommit]
doctest_modules = thurible.thurible
python_files = *
    thurible/*
    examples/*
    tests/*
rst_files = *
    docs/*
unit_tests = tests


[metadata]
name = thurible
version = 0.0.1
author = Paul J. Iutzi
author_email = pji@mac.com
description = Tools for creating fullscreen terminal UIs on top of blessed.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pji/thurible
project_urls =
    Bug Tracker = https://github.com/pji/thurible/issues
classifiers = 
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
zip_safe = False
package_dir =
    = .
packages = find:
python_requires = >= 3.10
